--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
 body {
   font-family: Arial, sans-serif;
   transition: height 0.2s ease-out;
+  padding: 0px;
+  margin: 0px;
 }
 
 #autocomplete-input {
   padding: 14px 8px;
-  border: 1px solid #f7f7f7;
   border-radius: 8px;
   margin-bottom: 0;
   font-size: 16px;
@@ -17,6 +18,7 @@ body {
   border: 1px solid transparent;
   border-bottom-color: #ecedef;
   transition: border-color 0.3s;
+  box-sizing: border-box;
 }
 
 #autocomplete-input:focus {
