--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ body {
 
 #autocomplete-input:focus {
   border-bottom-color: #66afe9;
+  border-radius: 8px 0px;
 }
 
 #suggestions-list {
@@ -35,12 +36,12 @@ body {
   border: 1px solid #99ceff;
   border-top: 0px;
   border-radius: 0 0 8px 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   background-color: #fff;
   z-index: 9999;
   display: none;
   max-height: 200px;
   overflow-y: auto;
+  box-sizing: border-box;
 }
 
 #suggestions-list li {
