--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
 
 #autocomplete-input:focus {
   border-bottom-color: #66afe9;
-  border-radius: 8px 0px;
+  border-radius: 8px 8px 0px 0px
 }
 
 #suggestions-list {
